@@ -1,6 +1,6 @@
 Frequently Asked Questions (FAQ) about opennap
 ==============================================
-Last updated on Dec 14, 1999.
+Last updated on February 25, 2000.
 
 Q:  What is opennap?
 A:  opennap is an open source server which speaks the napster protocol
@@ -11,9 +11,9 @@ A:  See www.napster.com for information.
 Q:  Is this project associated with napster.com?
 A:  No, this server was developed without any communication with napster.com
 
-Q:  Why isn't nick registration supported?
+Q:  Why can't I connect to the Napster.com servers?
+A:  We are not affiliated with Napster, Inc.  You should contact them for
+    assistance.
 
-A:  It is next to impossible to keep a group of distributed servers which
-    may connect/disconnect at will in sync with eachother.  Nick registration
-    needs to be handled as a centralized service ala NickServ on many
-    IRC networks.
+Q:  What language is opennap written in?
+A:  ANSI C.
